Fix image sizes and contrast

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,8 +1,8 @@
 :root {
   --color-white: #ffffff;
   --color-light-grey: #eeeeee;
-  --color-blue: #3c9afc;
-  --color-dark-blue: #0058b6;
+  --color-blue: #2b74c1;
+  --color-dark-blue: #003670;
 
   --max-width: 1600px;
 }
